<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".ConfirmarDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_datos"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="@dimen/top_et"
        android:textSize="@dimen/title_datos"
        android:textStyle="bold"></TextView>
    <TextView
        android:id="@+id/tvNombreDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_datos"
        android:layout_marginTop="@dimen/top_et"
        android:text="Lorena Hernández López"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="@string/campo_fecha_datos"></TextView>
        <TextView
            android:id="@+id/tvFechaDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="12/12/1987"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="@string/campo_telefono_datos"></TextView>
        <TextView
            android:id="@+id/tvTelefonoDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="3004568787"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="@string/campo_email_datos"></TextView>
        <TextView
            android:id="@+id/tvEmailDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="lhernandez@hotmail.com"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="@string/campo_descripcion_datos"></TextView>
        <TextView
            android:id="@+id/tvDescripcionDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_datos"
            android:text="Conocí a Lorena en el restaurante de comida italiana"></TextView>
    </LinearLayout>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_editar"
        android:theme="@style/BotonRaised"
        android:layout_marginTop="@dimen/top_boton_editar"
        android:layout_gravity="center"></Button>
</LinearLayout>